[metadata]
name = luna_core
version = attr: luna_core.__version__
description = Core library for luna packages.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
license = Apache License version 2.0
home_page = https://componcmsk.org/msk-mind/
author = msk-mind
author_email = CompOncBST@mskcc.org
url = https://github.com/msk-mind-apps/luna-core
project_urls =
	Bug Tracker = https://github.com/msk-mind-apps/luna-core/issues
classifiers =
	Framework :: Pytest
	Development Status :: 3 - Alpha
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    pip
    python-semantic-release
    wheel
    watchdog
    flake8
    tox
    coverage
    Sphinx
    twine
    Click
    poetry
    pytest
    pytest-cov
    pytest-mock
    pytest-runner
	dask
	distributed
	click
	decorator>=4.3,<5.0  # force constrain versions to avoid incompatibility with networkx requirements
	filehash
	joblib
	minio
	neo4j
	numpy>=1.9.0
	pyspark
	pytest
	pytest-cov
	pytest-mock
	pytest-runner
	wheel>=0.22
	pyinstaller>=4.0
	tornado>=6.0.4
	PyYAML>=5.4
	jsonpath-ng>=1.5.2
	yamale>=3.0.4
	deltalake>=0.2.1
	testfixtures
	requests-mock
	mock
	log4mongo

[options.package_data]
* = *.dcm, *.svg, *.bmp, *.yaml, *.yml, *.parquet, *.crc, *.json, *.npy

[options.entry_points]
console_scripts =

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[semantic_release]
branch = main
version_variable = luna_core/__init__.py:__version__
changelog_file = HISTORY.rst
commit_parser = semantic_release.history.emoji_parser
commit_version_number = True
check_build_status = True
# update to pypi for pypi.org release
repository = pypitest
upload_to_pypi = True
upload_to_release = True
